--- a/src/App.css
+++ b/src/App.css
@@ -7,37 +7,12 @@
   background-color: #fbc4b4;
   }
 
-.App {
-  text-align: center;
-  height: auto;
-  width: auto; 
-  margin-top: 20px;
-}
-
-.App-header {
+h1,p,h2{
+  font-family: "Montserrat", sans-serif;
+  background-color: white;
+  margin: 15px;
   display: flex;
   justify-content: center;
-  align-items: center;
-  margin: 5px 20px;
-  height: 100px;
-}
-
-h1 {
-  padding-top: 40px;
-}
-
-.list{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.list img {
-  height: 50px;
-}
-.logo {
-  height: 180px;
-  margin-right: auto;
-  
 }
 .list li {
  
@@ -53,7 +28,8 @@ h1 {
   text-decoration: none;
   list-style: none;
   transition: all 0.5s ease 0s;
-  padding: 10%;
+  
+  font-size: 25px;
   
 }
 
@@ -66,44 +42,11 @@ h1 {
     
   
 }
-.textocarro{
-  color: blue;
-  font-family: "Montserrat", sans-serif;
-  font-size: 1.1rem;
-  padding: 10%;
-
-}
-.carro{
-  display: flex;
-  color: blue;
-  align-items: center;
-}
-.carrito {
-  color: blue;
-  font-family: "Montserrat", sans-serif;
-  font-size: 1rem;
-  margin: auto;
-  display: flex;
-  
+.active{
+  color: gray;
 }
 
-
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.inactive{
+  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
