--- a/src/Component/pages/Cart/listproductbuy.scss
+++ b/src/Component/pages/Cart/listproductbuy.scss
@@ -1,15 +1,13 @@
 .listproductbuy {
 
     display: flex;
-    flex-direction: row;
+    flex-direction: unset;
     align-items: center;
-    margin-bottom: 10px;
     border-bottom: 1px solid black;
     background-color: white;
-    border-radius: 30px;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.05);
-    overflow: hidden;
+    border-radius: 10px;
     justify-content: space-between;
+    margin: 10px 0 10px 0;
     
 }
 
@@ -21,5 +19,31 @@
     justify-content: space-between;
     margin: 10px 0 10px 0;
 
+   
+}
+
+
+.listproduct-description {
+   
+   margin: 10px;
+    color: black;
+   display: flex;
+   align-items: center;
+   background-color: #F6F6F6;
+    justify-content: center;
+   
+    border-radius: 10px;
+   
+    
+}
+.logocarrito {
+    margin: 10px;
+    width: 40px;
+}
+
+.botones{
+    margin: 20px;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
    
 }
