--- a/src/Component/pages/Cart/listproductbuy.scss
+++ b/src/Component/pages/Cart/listproductbuy.scss
@@ -62,3 +62,33 @@ height: 90px;
 align-items: center;
 }
 
+
+
+
+
+.formcompra{
+    display: flex;
+}
+
+.contact__form{
+    width: 50%;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: gray;
+
+}
+
+  input[type="text"], textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+  }
+  textarea {
+    height: 100px;
+  }
+
+ 
