--- a/src/Component/pages/Cart/listproductbuy.scss
+++ b/src/Component/pages/Cart/listproductbuy.scss
@@ -7,7 +7,7 @@
     background-color: white;
     border-radius: 10px;
     justify-content: space-between;
-    margin: 10px 0 10px 0;
+    margin: 10px;
     
 }
 
@@ -17,7 +17,7 @@
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.05);
     overflow: hidden;
     justify-content: space-between;
-    margin: 10px 0 10px 0;
+    margin: 10px;
 
    
 }
@@ -64,19 +64,32 @@ align-items: center;
 
 
 
+.textototal{
+    background-color: gray;
+    width: 400px;
+    color: white;
+border-radius: 5px;
+height: 80px;
+align-items: center;
 
+
+}
 
 .formcompra{
     display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
 }
 
 .contact__form{
-    width: 50%;
+    width: 80%;
     margin: 0 auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: gray;
+    justify-content: center;
 
 }
 
