Adding functions and clean code

--- a/src/Component/pages/Cart/listproductbuy.scss
+++ b/src/Component/pages/Cart/listproductbuy.scss
@@ -65,13 +65,13 @@ align-items: center;
 
 
 .textototal{
-    background-color: gray;
+background-color: gray;
     width: 400px;
     color: white;
-border-radius: 5px;
-height: 80px;
-align-items: center;
-
+    border-radius: 5px;
+    height: 80px;
+    align-items: center;
+    display: flex;
 
 }
 
@@ -83,9 +83,11 @@ align-items: center;
 }
 
 .contact__form{
-    width: 80%;
-    margin: 0 auto;
-    padding: 20px;
+     width: 100%;
+    margin: 10px;
+    display: flex;
+    gap: 30px;
+    align-items: center;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: gray;
@@ -93,7 +95,7 @@ align-items: center;
 
 }
 
-  input[type="text"], textarea {
+  input[type="text"], input[type="email"],input[type="tel"],textarea {
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
